# agreements_violence

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
memory/: project_agreements_violence.md  user_lucia_context.md
reports/: 02_01_2026.md  23_12_2025.md
src/: __init__.py
src/1_data_generation/: codebook_conflict_panel.md  codebook_country_panel.md  conflict_panel.ipynb  country_panel.ipynb  sources_data.md
src/1_data_generation/archive/: conflict_panel_old_version.ipynb  country_panel copy.ipynb  country_panel.ipynb
src/2_data_analysis/: agreement_analysis.ipynb  eda.ipynb
src/2_data_analysis/utils/: plot_helpers.py  plot_style.py
src/3_causal_effect_estimation/: __init__.py
src/3_causal_effect_estimation/3_1_event_study/: __init__.py
src/3_causal_effect_estimation/3_1_event_study/conflict_level/: __init__.py
src/3_causal_effect_estimation/3_1_event_study/conflict_level/multiple_agreements/: __init__.py  (+2 more)
src/3_causal_effect_estimation/3_1_event_study/first_agreement/: csdid_first_agreement_conflict_panel.do  low_high.do
src/3_causal_effect_estimation/3_1_event_study/multiple_agreements/: 1_conflict_panel_window_generator.ipynb  1_country_panel_window_generator.ipynb  2_csdid_conflict_panel_windows.do  2_csdid_conflict_panel_windows_controls.do  2_csdid_country_panel_windows.do  README.md  window_generator.py
src/3_causal_effect_estimation/3_2_iv/country_level/: instrument.md  instruments.md  iv_regressions.do
src/3_survival_analysis/: 0_outcome_construction.ipynb  1_proxies_construction.ipynb  1_spell_dataset_construction.ipynb  2_survival_analysis.ipynb  3_cif_interaction_specs.ipynb  4_loot_onset_map.ipynb  README.md  export_cloglog_sheets.py  termination_outcome_analysis.ipynb
src/3_survival_analysis/functions/: build_experience.py  build_experience_compound.py  build_number_factions.py  build_onset_covariates.py  build_sc_distracted.py  build_sim_voting.py  build_termination_outcome.py  build_vdem_variables.py  cloglog_hazard.py  compute_cif.py  hazard_model.py  plot_bargaining_space.py  plot_functions.py  run_logit.py  table_to_latex.py
src/3_survival_analysis/functions/archive/: build_conflict_termination.py
src/3_survival_analysis/results/: results_cloglog.md
src/3_survival_analysis/trash/: agreements.ipynb  bargaining_model_logit.ipynb  proxy_definitions.md
src/4_csdid/: descriptives.ipynb  first_agreement_csdid.do  first_agreement_hte_csdid.do  helpers.do
src/4_csdid/trash/: first_agreement_active_csdid_monthly.do  first_agreement_active_csdid_quarterly.do  first_agreement_active_csdid_quarterly.ipynb  first_agreement_active_montly_stats_csdid.ipynb
src/archive/3_causal_effect_estimation/3_1_sdid/: sdid.ipynb  sdid_first_ceasefire_agreement_mentions.md  sdid_first_ceasefire_agreement_mentions_conflict_panel.do
(+12 files in other folders)
